--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "repository": "https://github.com/CommanderTso/godboundbot",
   "author": "Scott Macmillan",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "dependencies": {
+    "discord.js": "^12.2.0"
+  }
 }
